# faxpp

./: ChangeLog  Makefile.am  Makefile.in  TODO  configure  configure.in
docs/: Doxyfile.api  header.html
examples/: entity_resolver.c  output_event.h  parser_example.c  tokenizer_example.c
include/: Makefile.am  Makefile.in
include/faxpp/: buffer.h  char_classes.h  error.h  event.h  parser.h  text.h  token.h  tokenizer.h  transcode.h  xml_parser.h  xml_tokenizer.h
src/: attlistdecl.c  attr_cases.h  attr_states.h  buffer.c  buffer.h  cdata.c  char_classes.c  char_classes.h  comment.c  conditional.c  config.h.in  doctype.c  element.c  element.h  element_cases.h  element_states.h  elementdecl.c  entitydecl.c  error.c  event.c  notationdecl.c  pi.c  reference.c  test.c  test2.c  test3.c  token.c  tokenizer_states.c  tokenizer_states.h  transcode.c  xml_parser.c  xml_parser.h  xml_tokenizer.c  xml_tokenizer.h  xmldecl.c
tests/: xmlconf_runner.c
